2012-05-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Preparations for further pointer offset
	   optimizations

2012-05-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/peeph.def:
	  Allow disabling of tail-call and jump to return optimization.

2012-05-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: Fixed inconsistent offsets for 16-bit register
	  accesses. Removed broken and unused AOP_STR type. Prohibit loading
	  h via hx from volatile operands.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/memory.c,
	  src/z80/gen.c,
	  src/port.h,
	  src/SDCCglue.c,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Use lsidr for built-in memset() for r3ka.
	* src/hc08/gen.c:
	  Use ldhx, sthx for memory-to-memory assignment and cast.
	* src/hc08/peeph.def:
	  Basic tail call optimization.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/hc08/gen.c:
	  More efficient loading of H and HX for hc08 and s08.

2012-05-21 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/setjmp.c:
	  Enable test for r3ka.
	* support/regression/tests/gcc-torture-execute-pr28982a.c,
	  support/regression/tests/gcc-torture-execute-20010224-1.c,
	  support/regression/tests/gcc-torture-execute-20030408-1.c:
	  Disable tests for r3ka.
	* support/regression/Makefile.in:
	  Add ucr3ka target to z80 target.

2012-05-21 Leland Morrison <enigmalee AT sourceforge.net>

	* SDCCpeeph.c, peep.c: Fixed so that R2K instructions are
	  recognized for -mr3ka target by the peephole optimizer.

2012-05-20 Leland Morrison <enigmalee AT sourceforge.net>

	* support/regression/Makefile.in, support/regression/ports/ucr3ka/*,
	  support/regression/fwk/include/testfwk.h: added test-ucr3ka to
	  run regression tests on the rabbit 3000A port

2012-05-20 Leland Morrison <enigmalee AT sourceforge.net>

	* device/include/sdcc-lib.h, device/include/math.h: Added conditional
	  for rabbit 3000